--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,20 +21,45 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  pie_chart: ^5.0.0
+  cloud_firestore: ^2.2.2
+  firebase_core: ^1.3.0
+  sqflite: ^2.0.0+3
+  sqflite_common_ffi: ^2.0.0+1
+  path: ^1.8.0
   flutter:
     sdk: flutter
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  path_provider: ^2.0.2
+  async: ^2.5.0
+  io: ^1.0.0
+  flutter_spinkit: ^5.0.0
+  font_awesome_flutter: ^9.0.0
+  location: ^4.1.1
+  http: ^0.13.3
+  fl_chart: ^0.36.1
+
+
+
+
+
+
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
 
 # The following section is specific to Flutter.
 flutter:
@@ -59,6 +84,8 @@ flutter:
     - resimdosyalari/images/cennetkoyu.jpg
     - resimdosyalari/images/Bodrumsokak.jpg
     - resimdosyalari/images/bodrummerkez.png
+    - resimdosyalari/images/tekne.jpg
+    - resimdosyalari/images/tuzlakuscenneti
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
